Add QuienesSomos component

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     }
     </script>
-    <title>Vite + React</title>
+    <title>M&M GEOINGENIERÍA</title>
   </head>
   <body>
     <div id="root"></div>
